--- a/src/main/resources/com/example/insurance/hello-view.fxml
+++ b/src/main/resources/com/example/insurance/hello-view.fxml
@@ -30,7 +30,40 @@
                </opaqueInsets>
                <children>
                   <VBox alignment="BASELINE_LEFT" prefHeight="540.0" prefWidth="140.0" style="-fx-background-color: #00ffff;" HBox.hgrow="ALWAYS" />
-                  <VBox prefHeight="590.0" prefWidth="695.0" style="-fx-background-color: #8a2be2;" HBox.hgrow="ALWAYS" />
+                  <VBox prefHeight="590.0" prefWidth="695.0" style="-fx-background-color: #8a2be2;" HBox.hgrow="ALWAYS">
+                     <children>
+                        <GridPane prefHeight="337.0" prefWidth="713.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints maxHeight="108.0" minHeight="10.0" prefHeight="102.0" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="215.0" minHeight="10.0" prefHeight="102.0" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="133.0" vgrow="ALWAYS" />
+                          </rowConstraints>
+                           <children>
+                              <TextField prefHeight="25.0" prefWidth="291.0" GridPane.columnIndex="1" GridPane.valignment="CENTER">
+                                 <GridPane.margin>
+                                    <Insets left="50.0" right="50.0" />
+                                 </GridPane.margin>
+                              </TextField>
+                              <TextField GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets left="50.0" right="50.0" />
+                                 </GridPane.margin>
+                              </TextField>
+                              <TextField GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                 <GridPane.margin>
+                                    <Insets left="50.0" right="50.0" />
+                                 </GridPane.margin>
+                              </TextField>
+                           </children>
+                           <VBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </VBox.margin>
+                        </GridPane>
+                     </children></VBox>
                   <VBox alignment="TOP_RIGHT" prefHeight="540.0" prefWidth="149.0" style="-fx-background-color: #deb887;" HBox.hgrow="ALWAYS" />
                </children></HBox>
          </children>
