--- a/src/main/resources/com/example/insurance/hello-view.fxml
+++ b/src/main/resources/com/example/insurance/hello-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="1080.0" maxWidth="2560.0" minHeight="600.0" minWidth="800.0" prefHeight="657.0" prefWidth="1038.0" scaleShape="false" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="1080.0" maxWidth="2560.0" minHeight="600.0" minWidth="800.0" prefHeight="657.0" prefWidth="1038.0" scaleShape="false" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane maxHeight="1080.0" maxWidth="0.0" prefHeight="66.0" style="-fx-background-color: #dc143c;">
          <children>
@@ -32,32 +32,70 @@
                   <VBox alignment="BASELINE_LEFT" prefHeight="540.0" prefWidth="140.0" style="-fx-background-color: #00ffff;" HBox.hgrow="ALWAYS" />
                   <VBox prefHeight="590.0" prefWidth="695.0" style="-fx-background-color: #8a2be2;" HBox.hgrow="ALWAYS">
                      <children>
-                        <GridPane prefHeight="337.0" prefWidth="713.0">
+                        <GridPane prefHeight="370.0" prefWidth="693.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints maxHeight="108.0" minHeight="10.0" prefHeight="102.0" vgrow="SOMETIMES" />
                             <RowConstraints maxHeight="215.0" minHeight="10.0" prefHeight="102.0" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="133.0" vgrow="ALWAYS" />
+                            <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="102.0" vgrow="ALWAYS" />
+                              <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="102.0" vgrow="ALWAYS" />
                           </rowConstraints>
                            <children>
-                              <TextField prefHeight="25.0" prefWidth="291.0" GridPane.columnIndex="1" GridPane.valignment="CENTER">
+                              <TextField prefHeight="25.0" prefWidth="291.0" promptText="Фамилия" GridPane.columnIndex="1" GridPane.valignment="CENTER">
                                  <GridPane.margin>
                                     <Insets left="50.0" right="50.0" />
                                  </GridPane.margin>
                               </TextField>
-                              <TextField GridPane.columnIndex="1" GridPane.rowIndex="1">
+                              <TextField fx:id="PhoneTextField" onInputMethodTextChanged="#CheckLenghtOfText" promptText="+375 ..." text="+375" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                  <GridPane.margin>
                                     <Insets left="50.0" right="50.0" />
                                  </GridPane.margin>
                               </TextField>
-                              <TextField GridPane.columnIndex="1" GridPane.rowIndex="2">
+                              <TextField promptText="имя">
                                  <GridPane.margin>
                                     <Insets left="50.0" right="50.0" />
                                  </GridPane.margin>
                               </TextField>
+                              <TextField promptText="Логин" GridPane.rowIndex="2">
+                                 <GridPane.margin>
+                                    <Insets left="50.0" right="50.0" />
+                                 </GridPane.margin>
+                              </TextField>
+                              <TextField prefHeight="24.0" prefWidth="131.0" promptText="Отчество" GridPane.columnIndex="2">
+                                 <GridPane.margin>
+                                    <Insets left="50.0" right="50.0" />
+                                 </GridPane.margin>
+                                 <opaqueInsets>
+                                    <Insets />
+                                 </opaqueInsets>
+                              </TextField>
+                              <TextField promptText="email" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets left="50.0" right="50.0" />
+                                 </GridPane.margin>
+                              </TextField>
+                              <DatePicker GridPane.rowIndex="1">
+                                 <opaqueInsets>
+                                    <Insets />
+                                 </opaqueInsets>
+                                 <GridPane.margin>
+                                    <Insets left="50.0" right="50.0" />
+                                 </GridPane.margin>
+                              </DatePicker>
+                              <PasswordField GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                 <GridPane.margin>
+                                    <Insets left="50.0" right="50.0" />
+                                 </GridPane.margin>
+                              </PasswordField>
+                              <PasswordField GridPane.columnIndex="2" GridPane.rowIndex="2">
+                                 <GridPane.margin>
+                                    <Insets left="50.0" right="50.0" />
+                                 </GridPane.margin>
+                              </PasswordField>
                            </children>
                            <VBox.margin>
                               <Insets left="10.0" right="10.0" />
