--- a/src/main/resources/com/example/insurance/hello-view.fxml
+++ b/src/main/resources/com/example/insurance/hello-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="1080.0" maxWidth="2560.0" minHeight="600.0" minWidth="800.0" prefHeight="657.0" prefWidth="1038.0" scaleShape="false" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="1080.0" maxWidth="2560.0" minHeight="600.0" minWidth="800.0" prefHeight="657.0" prefWidth="1038.0" scaleShape="false" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.HelloController">
    <children>
       <AnchorPane maxHeight="1080.0" maxWidth="0.0" prefHeight="66.0" style="-fx-background-color: #dc143c;">
          <children>
@@ -30,9 +30,9 @@
                </opaqueInsets>
                <children>
                   <VBox alignment="BASELINE_LEFT" prefHeight="540.0" prefWidth="140.0" style="-fx-background-color: white;" HBox.hgrow="ALWAYS" />
-                  <VBox id="VboxWithBorder" fx:id="vboxWithBorder" prefHeight="504.0" prefWidth="713.0" style="-fx-border-color: #000080; -fx-background-color: linear-gradient(to bottom left,#00008050%,  #b0c4de 50% ); -fx-border-width: 5px;" styleClass="vboxWithBorder" HBox.hgrow="ALWAYS">
+                  <VBox id="VboxWithBorder" fx:id="vboxWithBorder" prefHeight="504.0" prefWidth="713.0" style="-fx-border-color: #000080; -fx-background-color: linear-gradient(to bottom left,#000080 50%,  #b0c4de 50% ); -fx-border-width: 5px;" styleClass="vboxWithBorder" HBox.hgrow="ALWAYS">
                      <children>
-                        <GridPane prefHeight="370.0" prefWidth="693.0">
+                        <GridPane fx:id="GridPanel" prefHeight="370.0" prefWidth="693.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -78,7 +78,7 @@
                                     <Insets left="50.0" right="50.0" />
                                  </GridPane.margin>
                               </TextField>
-                              <DatePicker promptText="Дата рождения" GridPane.rowIndex="1">
+                              <DatePicker fx:id="Calendar" promptText="Дата рождения" GridPane.rowIndex="1">
                                  <opaqueInsets>
                                     <Insets />
                                  </opaqueInsets>
@@ -96,7 +96,7 @@
                                     <Insets left="50.0" right="50.0" />
                                  </GridPane.margin>
                               </PasswordField>
-                              <Button mnemonicParsing="false" text="Очистить" GridPane.rowIndex="3">
+                              <Button mnemonicParsing="false" onAction="#ClearTextFields" text="Очистить" GridPane.rowIndex="3">
                                  <GridPane.margin>
                                     <Insets left="85.0" />
                                  </GridPane.margin>
