--- a/src/main/resources/com/example/insurance/hello-view.fxml
+++ b/src/main/resources/com/example/insurance/hello-view.fxml
@@ -3,14 +3,15 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="1080.0" maxWidth="2560.0" minHeight="600.0" minWidth="800.0" prefHeight="657.0" prefWidth="1038.0" scaleShape="false" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.HelloController">
+<VBox maxHeight="1080.0" maxWidth="2560.0" minHeight="600.0" minWidth="800.0" prefHeight="720.0" prefWidth="1280.0" scaleShape="false" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.HelloController">
    <children>
-      <AnchorPane maxHeight="1080.0" maxWidth="0.0" prefHeight="66.0" style="-fx-background-color: #dc143c;">
+      <AnchorPane maxHeight="1080.0" maxWidth="1.7976931348623157E308" prefHeight="66.0" style="-fx-background-color: white;">
          <children>
-            <HBox prefHeight="57.0" prefWidth="1038.0" style="-fx-background-color: #b0c4de;" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1038.0" AnchorPane.topAnchor="0.0">
+            <HBox cacheShape="false" centerShape="false" fillHeight="false" style="-fx-background-color: #b0c4de;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                <children>
                   <Label prefHeight="47.0" prefWidth="450.0" text="UNIONINSURANCE" textFill="#3e2a5b">
                      <HBox.margin>
@@ -20,6 +21,18 @@
                         <Font name="OCR A Extended" size="44.0" />
                      </font>
                   </Label>
+
+
+                  <ImageView fitHeight="64.0" fitWidth="128.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Registration.png" />
+                     </image>
+                     <HBox.margin>
+                        <Insets left="680.0" />
+                     </HBox.margin>
+                  </ImageView>
+
+
                </children></HBox>
          </children></AnchorPane>
       <AnchorPane prefHeight="583.0" prefWidth="1038.0">
@@ -29,7 +42,17 @@
                   <Insets />
                </opaqueInsets>
                <children>
-                  <VBox alignment="BASELINE_LEFT" prefHeight="540.0" prefWidth="140.0" style="-fx-background-color: white;" HBox.hgrow="ALWAYS" />
+                  <VBox alignment="CENTER" prefHeight="540.0" prefWidth="140.0" style="-fx-background-color: white;" HBox.hgrow="ALWAYS">
+                     <children>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@carRegistrationBackground.png" />
+                           </image></ImageView>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@HouseInsurance.png" />
+                           </image></ImageView>
+                     </children></VBox>
                   <VBox id="VboxWithBorder" fx:id="vboxWithBorder" prefHeight="504.0" prefWidth="713.0" style="-fx-border-color: #301c94; -fx-background-color: linear-gradient(to bottom left,#301c94 53%,  #b0c4de 47% ); -fx-border-width: 5px;" styleClass="vboxWithBorder" HBox.hgrow="ALWAYS">
                      <children>
                         <GridPane fx:id="GridPanel" prefHeight="370.0" prefWidth="693.0">
@@ -47,13 +70,19 @@
                            <children>
                               <TextField prefHeight="25.0" prefWidth="291.0" promptText="Фамилия" style="-fx-border-width: 4px; -fx-border-color: #b0c4de; -fx-prompt-text-fill: #b0c4de; -fx-background-color: NULL; -fx-text-fill: #b0c4de;" GridPane.columnIndex="1" GridPane.valignment="CENTER">
                                  <GridPane.margin>
-                                    <Insets left="50.0" right="20.0" />
+                                    <Insets left="60.0" right="20.0" />
                                  </GridPane.margin>
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
                               </TextField>
                               <TextField fx:id="PhoneTextField" prefHeight="33.0" prefWidth="143.0" style="-fx-border-width: 4px; -fx-border-color: linear-gradient(to bottom left, #b0c4de 5%,   #301c94  95% ); -fx-background-color: null; -fx-text-fill: white;" text="+375" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                  <GridPane.margin>
-                                    <Insets left="50.0" right="20.0" />
+                                    <Insets left="60.0" right="20.0" />
                                  </GridPane.margin>
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
                               </TextField>
                               <Label alignment="CENTER" contentDisplay="CENTER" style="-fx-background-color: null;" textAlignment="CENTER" GridPane.columnSpan="3" GridPane.rowSpan="3">
                                  <GridPane.margin>
@@ -64,11 +93,17 @@
                                  <GridPane.margin>
                                     <Insets left="50.0" right="50.0" />
                                  </GridPane.margin>
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
                               </TextField>
                               <TextField promptText="Логин" style="-fx-border-width: 4px; -fx-border-color: #301c94; -fx-prompt-text-fill: black; -fx-background-color: null;" GridPane.rowIndex="2">
                                  <GridPane.margin>
                                     <Insets left="50.0" right="50.0" />
                                  </GridPane.margin>
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
                               </TextField>
                               <TextField prefHeight="24.0" prefWidth="131.0" promptText="Отчество" style="-fx-border-width: 4px; -fx-border-color: #b0c4de; -fx-prompt-text-fill: #b0c4de; -fx-background-color: NULL; -fx-text-fill: #b0c4de;" GridPane.columnIndex="2">
                                  <GridPane.margin>
@@ -77,13 +112,19 @@
                                  <opaqueInsets>
                                     <Insets />
                                  </opaqueInsets>
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
                               </TextField>
                               <TextField promptText="email" style="-fx-border-width: 4px; -fx-border-color: #b0c4de; -fx-prompt-text-fill: #b0c4de; -fx-text-fill: #b0c4de; -fx-background-color: NULL;" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                  <GridPane.margin>
                                     <Insets left="50.0" right="50.0" />
                                  </GridPane.margin>
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
                               </TextField>
-                              <DatePicker fx:id="Calendar" promptText="Дата рождения" style="-fx-border-width: 4px; -fx-border-color: #301c94; -fx-prompt-text-fill: black; -fx-control-inner-background: #b0c4de;" GridPane.rowIndex="1">
+                              <DatePicker fx:id="Calendar" editable="false" promptText="Дата рождения" style="-fx-border-width: 4px; -fx-border-color: #301c94; -fx-prompt-text-fill: black; -fx-control-inner-background: #b0c4de;" GridPane.rowIndex="1">
                                  <opaqueInsets>
                                     <Insets />
                                  </opaqueInsets>
@@ -93,41 +134,61 @@
                               </DatePicker>
                               <PasswordField promptText="Пароль" style="-fx-border-width: 4px; -fx-border-color: linear-gradient(to bottom left, #b0c4de 30%,   #301c94  70% );-fx-prompt-text-fill: black;-fx-background-color: NULL;" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                  <GridPane.margin>
-                                    <Insets left="50.0" right="20.0" />
+                                    <Insets left="60.0" right="20.0" />
                                  </GridPane.margin>
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
                               </PasswordField>
                               <PasswordField promptText="Еще раз пароль" style="-fx-border-width: 4px; -fx-border-color: #b0c4de; -fx-prompt-text-fill: #b0c4de; -fx-background-color: NULL; -fx-text-fill: #b0c4de;" GridPane.columnIndex="2" GridPane.rowIndex="2">
                                  <GridPane.margin>
                                     <Insets left="50.0" right="50.0" />
                                  </GridPane.margin>
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
                               </PasswordField>
                               <Button mnemonicParsing="false" onAction="#ClearTextFields" style="-fx-border-width: 4px; -fx-border-color: #301c94; -fx-background-color: null;" text="Очистить" GridPane.rowIndex="3">
                                  <GridPane.margin>
                                     <Insets left="85.0" />
                                  </GridPane.margin>
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
                               </Button>
-                              <Button mnemonicParsing="false" style="-fx-border-width: 4px; -fx-border-color: #301c94; -fx-background-color: null;" text="Регистрация" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                              <CheckBox mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" style="-fx-border-width: 4px; -fx-border-color: #b0c4de; -fx-text-fill: #b0c4de;" text="Сотрудник" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                              <Button mnemonicParsing="false" style="-fx-border-width: 4px; -fx-border-color: #301c94; -fx-background-color: null;" text="Регистрация" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font></Button>
+                              <CheckBox mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" style="-fx-text-fill: #b0c4de;" text="Сотрудник" GridPane.columnIndex="2" GridPane.rowIndex="3">
                                  <GridPane.margin>
                                     <Insets left="50.0" right="50.0" />
-                                 </GridPane.margin></CheckBox>
+                                 </GridPane.margin>
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font></CheckBox>
                            </children>
                            <VBox.margin>
                               <Insets left="10.0" right="10.0" top="100.0" />
                            </VBox.margin>
                         </GridPane>
                      </children></VBox>
-                  <VBox alignment="TOP_RIGHT" prefHeight="540.0" prefWidth="149.0" style="-fx-background-color: white;" HBox.hgrow="ALWAYS" />
+                  <VBox alignment="CENTER" prefHeight="540.0" prefWidth="149.0" style="-fx-background-color: white;" HBox.hgrow="ALWAYS">
+                     <children>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@lifeInsurance.png" />
+                           </image>
+                           <VBox.margin>
+                              <Insets left="-40.0" />
+                           </VBox.margin></ImageView>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@RegLog%20BackgroundAuto.png" />
+                           </image></ImageView>
+                     </children></VBox>
                </children></HBox>
          </children>
-      </AnchorPane>
-      <AnchorPane maxHeight="59.0" minHeight="20.0" prefHeight="55.0" prefWidth="1038.0" VBox.vgrow="NEVER">
-         <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="441.0" maxHeight="30.0" text="Label" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="441.0" AnchorPane.rightAnchor="482.0" AnchorPane.topAnchor="0.0" />
-         </children>
-         <VBox.margin>
-            <Insets bottom="-1.0" />
-         </VBox.margin>
       </AnchorPane>
    </children>
    <cursor>
