--- a/src/main/resources/com/example/insurance/SignUp.fxml
+++ b/src/main/resources/com/example/insurance/SignUp.fxml
@@ -1,14 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox prefHeight="461.0" prefWidth="827.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.SignUpController">
+<VBox prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.SignUpController">
    <children>
-      <AnchorPane prefHeight="50.0" prefWidth="200.0">
+      <AnchorPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #b0c4de;">
          <children>
-            <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <HBox prefHeight="65.0" prefWidth="827.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <Label text="UNIONINSURANCE" textFill="#3e2a5b">
+                     <font>
+                        <Font name="OCR A Extended" size="44.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="10.0" top="10.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Button fx:id="SignUp" mnemonicParsing="false" onAction="#SwitchSceneSignUp" prefHeight="66.0" prefWidth="148.0" style="-fx-background-color: null;">
+                     <graphic>
+                        <ImageView fitHeight="66.0" fitWidth="174.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@SignUp.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <HBox.margin>
+                        <Insets left="700.0" />
+                     </HBox.margin></Button>
+               </children></HBox>
          </children>
       </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" />
+      <AnchorPane prefHeight="436.0" prefWidth="827.0" />
    </children>
 </VBox>
