--- a/src/main/resources/com/example/insurance/SignUp.fxml
+++ b/src/main/resources/com/example/insurance/SignUp.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.SignUpController">
+<VBox prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.SignUpController">
    <children>
       <AnchorPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #b0c4de;">
          <children>
@@ -79,7 +79,7 @@
                         <Insets bottom="100.0" left="155.0" right="100.0" top="100.0" />
                      </HBox.margin>
                      <children>
-                        <Button fx:id="TrySignUp" mnemonicParsing="false" onAction="#signUpUser" prefHeight="38.0" prefWidth="148.0" style="-fx-background-color: null; -fx-border-color: linear-gradient(to bottom left,#b0c4de 30% ,  #301c94 30% ); -fx-border-width: 4px;" text="Войти" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                        <Button fx:id="TrySignUp" mnemonicParsing="false" onAction="#signUpUser" onMouseEntered="#SignUpColorUp" onMouseExited="#SignUpColorDown" prefHeight="38.0" prefWidth="148.0" style="-fx-background-color: null; -fx-border-color: linear-gradient(to bottom left,#b0c4de 30% ,  #301c94 30% ); -fx-border-width: 4px;" text="Войти" GridPane.columnIndex="1" GridPane.rowIndex="3">
                            <GridPane.margin>
                               <Insets bottom="70.0" left="160.0" />
                            </GridPane.margin></Button>
