--- a/src/main/resources/com/example/insurance/EmployeeMainMenu.fxml
+++ b/src/main/resources/com/example/insurance/EmployeeMainMenu.fxml
@@ -76,7 +76,7 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="537.0" prefWidth="1280.0">
                      <children>
-                        <Button layoutX="93.0" layoutY="14.0" mnemonicParsing="false" text="Button" />
+                        <Button layoutX="71.0" layoutY="14.0" mnemonicParsing="false" onAction="#upDateTable" text="Обновить" />
                         <Button layoutX="158.0" layoutY="14.0" mnemonicParsing="false" text="Button" />
                         <Button layoutX="226.0" layoutY="14.0" mnemonicParsing="false" text="Button" />
                         <TableView fx:id="contracts" layoutX="31.0" layoutY="121.0" prefHeight="200.0" prefWidth="729.0">
